--- a/tutorials/files/svz.ipynb
+++ b/tutorials/files/svz.ipynb
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0,
@@ -994,7 +994,7 @@
     "    if close:\n",
     "        struct = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (size, size))\n",
     "        img_bin = cv2.morphologyEx(img_bin, cv2.MORPH_CLOSE, struct)\n",
-    "    res, _, _ = find_contours(img_bin)\n",
+    "    res, _, _ = find_contours(img_bin, 2000, 25000)\n",
     "    return res"
    ]
   },
@@ -2807,7 +2807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2821,7 +2821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
